...
                Navigator.pop(context);
                context.push('/my-account'); // Navigate using GoRouter
              },
            ),
            ListTile(
              leading: const Icon(Icons.repeat), // Icon for Routines
              title: const Text('Routines'),
              onTap: () {
                Navigator.pop(context); // Close the drawer
                Navigator.push(
                  context,
                  MaterialPageRoute(builder: (context) => const RoutinesScreen()),
                );
...
                activeIcon: Icon(Icons.calendar_today),
                label: 'Calendar',
              ),
              const BottomNavigationBarItem(
                icon: Icon(Icons.grid_view_outlined),
                activeIcon: Icon(Icons.grid_view),
                label: 'Categories',
              ),
              const BottomNavigationBarItem(
                icon: Icon(Icons.list_alt_outlined),
                activeIcon: Icon(Icons.list_alt),
                label: 'Lists',
              ),
              BottomNavigationBarItem(
                icon: Stack(
                  clipBehavior: Clip.none,
                  children: [
                    const Icon(Icons.task_outlined),
...
